Ensure the matomo config is also deferred as it requires matomo.

--- a/sites/www.thunderbird.net/includes/bedrock/base-resp.html
+++ b/sites/www.thunderbird.net/includes/bedrock/base-resp.html
@@ -102,7 +102,7 @@
     {% block additional_site_js %}{% endblock %}
     {% block tracker_js %}
       <script type="text/javascript" src="/media/js/matomo.js" async defer></script>
-      <script type="text/javascript" src="/media/js/matomo-config.js" charset="utf-8"></script>
+      <script type="text/javascript" src="/media/js/matomo-config.js" async defer charset="utf-8"></script>
       <noscript>
         <p><img src="//thunderbird.innocraft.cloud/piwik.php?idsite=1&rec=1" style="border:0;" alt="" /></p>
       </noscript>
