--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -129,9 +129,9 @@
     </div>
     <div class="phone" aria-hidden="true">
       <picture>
-        <source srcset="/media/img/thunderbird/new/phone/cta-phone.avif" type="image/avif">
-        <source srcset="/media/img/thunderbird/new/phone/cta-phone.webp" type="image/webp">
-        <img src="/media/img/thunderbird/new/phone/cta-phone.png" alt="{{_('smartphone')}}">
+        <source srcset="{{ static('img/thunderbird/new/phone/cta-phone.avif') }}" type="image/avif">
+        <source srcset="{{ static('img/thunderbird/new/phone/cta-phone.webp') }}" type="image/webp">
+        <img src="{{ static('img/thunderbird/new/phone/cta-phone.png') }}" alt="{{_('smartphone')}}">
       </picture>
     </div>
   </div>
