--- a/assets/less/new/components/pre-footer.less
+++ b/assets/less/new/components/pre-footer.less
@@ -1,7 +1,7 @@
 // Pre-footer
 #whats-next {
   background-color: black;
-  background-image: linear-gradient(to top, var(--color-ink-90), black 80%);
+  background-image: linear-gradient(to top, var(--color-ink-90), black 37rem);
   background-size: auto 80vh, 100%;
   background-position: bottom center, center;
   background-repeat: no-repeat;
