--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -2,6 +2,12 @@
   --heading-spacing: 6rem;
   --line-height: 30px;
 
+  kbd {
+    border-radius: 4px;
+    padding: 1px 2px 0;
+    border: 1px solid black;
+  }
+
   .accordion {
     width: 100%;
     min-width: auto;
@@ -30,6 +36,7 @@
     li {
       list-style: none;
     }
+
     ul {
       padding: 0;
     }
@@ -138,9 +145,11 @@
       max-inline-size: none;
       width: 100%;
     }
+
     .note-flex {
       flex-direction: column;
     }
+
     .category-icon {
       display: none;
     }
