Lots of tweaks to better support non-default font sizes for accessibility.

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -58,7 +58,7 @@
 }
 
 .scrolled-nav {
-  --nav-height: 60px;
+  --nav-height: 3.75rem;//60px;
   border-color: rgba(255, 255, 255, .25);
   box-shadow: 0 4px 8px -2px rgba(0, 0, 0, .25);
   background-color: rgba(0, 0, 0, .8);
