--- a/assets/less/new/sizing.less
+++ b/assets/less/new/sizing.less
@@ -1,15 +1,16 @@
 :root {
-  // Font variables
-  --font-base: 13px;
-  --font-xs: 9px;
-  --font-sm: 11px;
-  --font-regular: 12px;
-  --font-md: 15px;
-  --font-lg: 19px;
-  --font-2xl: 21px;
-  --font-3xl: 25px;
-  --font-4xl: 41px;
-  --font-hero: 59px;
+  // Font variables (base size: 16px)
+  --font-base: 0.8125rem;     // 13px
+  --font-xs: 0.5625rem;       // 9px
+  --font-sm: 0.6875rem;       // 11px
+  --font-regular: 0.75rem;    // 12px
+  --font-md: 1.0rem;          // 16px
+  --font-lg: 1.1875rem;       // 19px
+  --font-2xl: 1.3125rem;      // 21px
+  --font-3xl: 1.5625rem;      // 25px
+  --font-4xl: 2.5625rem;      // 41px
+  --font-hero: 3.6875rem;     // 59px
+  --font-body: 1.125rem;      // 18px
 }
 
 .section-text :where(h2) {
