--- a/assets/less/new-style.less
+++ b/assets/less/new-style.less
@@ -7,9 +7,9 @@
 /*-------------------------
 * Media Queries
 *--------------------------*/
-@xs: 480px;
-@sm: 640px;
-@md: 768px;
-@lg: 1024px;
-@xl: 1280px;
-@xxl: 1440px;
+@xs: 30rem;     // 480px
+@sm: 40rem;     // 640px
+@md: 48rem;     // 768px
+@lg: 64rem;     // 1024px
+@xl: 80rem;     // 1280px
+@xxl: 90rem;    // 1440px
