--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -31,7 +31,7 @@
 
   a.btn {
     padding: 0.72em 1em;
-    border-width: 2px;
+    border-width: 0.125rem; //2px;
   }
 
   a.btn::after {
@@ -56,7 +56,7 @@ a.btn,
 button {
   font-size: 1rem;
   background: var(--btn-bg, transparent);
-  border-radius: 6px;
+  border-radius: 0.375rem ;//6px;
   border: .12em solid currentColor;
   color: currentColor;
   padding: .5em 3em;
@@ -110,7 +110,7 @@ button:hover::after {
 /** HACK for Mozilla Firefox */
 @-moz-document url-prefix() {
   .download-link.btn-download::after {
-    inset-inline-end: 4px;
+    inset-inline-end: 0.25rem; //4px;
   }
 }
 
@@ -166,7 +166,7 @@ button:hover::after {
 .oldwin .download-button .unsupported-download,
 .oldmac .download-button .unsupported-download {
   display: block;
-  max-width: 250px;
+  max-width: 15.625rem ;//250px;
 }
 
 .windows.arm .download-button .fx-privacy-link,
@@ -215,17 +215,17 @@ button:hover::after {
 }
 
 .download-button ul li {
-  margin-block: 20px;
+  margin-block: 1.25rem ;//20px;
 }
 
 .download-dumb {
   ul li {
-    margin-block: 40px;
+    margin-block: 2.5rem; //40px;
   }
 }
 
 .all-downloads-link {
-  margin-bottom: 60px;
+  margin-bottom: 3.75rem; //60px;
 }
 
 
