--- a/assets/less/new/components/pre-footer.less
+++ b/assets/less/new/components/pre-footer.less
@@ -9,7 +9,7 @@
   overflow: hidden;
 
   .cta {
-    margin-top: 80px;
+    margin-top: 5rem; //80px;
   }
 
   .container {
@@ -24,9 +24,9 @@
 
   .social-list {
     display: flex;
-    gap: 24px;
+    gap: 1.5rem; // 24px;
     justify-content: center;
-    margin-block: 60px;
+    margin-block: 3.75rem; //60px;
   }
 
   .newsletter {
@@ -36,8 +36,8 @@
   }
 
   .newsletter-form {
-    border: 2px solid currentColor;
-    border-radius: 6px;
+    border: 0.125rem solid currentColor;
+    border-radius: 0.375rem; //6px;
     max-width: 100%;
     padding: 0;
     margin: 0;
@@ -112,9 +112,9 @@
 
   .phone {
     max-width: calc(100vw - 2rem);
-    width: 500px;
+    width: 31.25rem; //500px;
     margin-inline: auto;
-    margin-block: -125px -650px;
+    margin-block: -7.8125rem -40.625rem;//-125px -650px;
   }
 
 }
