--- a/assets/less/new/variables.less
+++ b/assets/less/new/variables.less
@@ -6,16 +6,16 @@
   --separator-color: var(--color-gray-20);
   --nav-bg: transparent;
   --nav-txt: white;
-  --nav-height: 80px;
+  --nav-height: 5rem; // 80px
 
   --offset-x: 0;
   --offset-y: 0;
 
   --page-header-bg: rgb(242, 242, 242);
 
-  --border-radius-sm: 3px;
-  --border-radius-md: 6px;
-  --border-radius-lg: 12px;
+  --border-radius-sm: 0.1875rem ; // 3px;
+  --border-radius-md: 0.375rem ; // 6px;
+  --border-radius-lg: 0.75rem ; // 12px;
   --border-radius-circle: 100%;
 
   // Defaults
