--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -28,3 +28,4 @@
 @import "./pages/releases.less";
 @import "./pages/system-requirements.less";
 @import "./pages/newsletter.less";
+@import "./pages/donations-help.less";
