Holiday Calendar: Fix up the styling, and add a footer link.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -29,3 +29,4 @@
 @import "./pages/system-requirements.less";
 @import "./pages/newsletter.less";
 @import "./pages/donations-help.less";
+@import "./pages/holiday.less";
