--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -106,7 +106,7 @@ button:hover::after {
   opacity: .75;
   background-size: 500%;
 }
-
+/*
 /** HACK for Mozilla Firefox */
 @-moz-document url-prefix() {
   .download-link.btn-download::after {
