General: Update copy

--- a/assets/less/pages/participate.less
+++ b/assets/less/pages/participate.less
@@ -60,16 +60,13 @@
     width: 100%;
     font-weight: 400;
 
-    li {
-      font-size: 1.05rem;
-    }
-
-    a {
-      text-decoration-style: dotted;
-    }
 
     @media (max-width: @sm) {
       gap: 1rem;
+    }
+
+    .styled-list {
+      text-indent: -2.5rem;
     }
   }
 
@@ -78,6 +75,13 @@
   }
 
   .styled-list {
-    text-indent: -2.5rem;
+    font-weight: 400;
+    li {
+      font-size: 1.05rem;
+    }
+
+    a {
+      text-decoration-style: dotted;
+    }
   }
 }
