--- a/sites/www.thunderbird.net/includes/announcement.html
+++ b/sites/www.thunderbird.net/includes/announcement.html
@@ -1,3 +1,1 @@
-<div class="site-announcement">
-  Thunderbird.net has a new look! <a class="strong" href="{{ url('blog') }}">Learn More.</a>
-</div>
+<div class="site-announcement"></div>
