--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -12,6 +12,12 @@
 {% block page_favicon_large %}{{ static('img/thunderbird/favicon-196.png') }}{% endblock %}
 {% block page_ios_icon %}{{ static('img/thunderbird/ios-icon-180.png') }}{% endblock %}
 
+{# Uncomment this to enable the site-wide announcement!
+  {% block site_header_unwrapped %}
+  {% include 'includes/announcement.html' %}
+  {% endblock %}
+#}
+
 {% block site_nav %}
 <nav class="site-nav">
   <div class="nav-container">
