--- a/sites/www.thunderbird.net/includes/base/base.html
+++ b/sites/www.thunderbird.net/includes/base/base.html
@@ -89,13 +89,8 @@
 
     {% block additional_site_js %}{% endblock %}
     {% block tracker_js %}
-<<<<<<<< HEAD:sites/www.thunderbird.net/includes/base/base.html
-      <script type="text/javascript" src="{{ static('js/piwik.js') }}" async defer></script>
-      <script type="text/javascript" src="{{ static('js/matomo.js') }}" charset="utf-8"></script>
-========
-      <script type="text/javascript" src="/media/js/matomo-config.js" charset="utf-8"></script>
-      <script type="text/javascript" src="/media/js/matomo.js" async defer></script>
->>>>>>>> master:sites/www.thunderbird.net/includes/new/base.html
+      <script type="text/javascript" src="{{ static('js/matomo-config.js') }}" charset="utf-8"></script>
+      <script type="text/javascript" src="{{ static('js/matomo.js') }}" async defer></script>
       <noscript>
         <p><img src="//thunderbird.innocraft.cloud/piwik.php?idsite=1&rec=1" style="border:0;" alt="" /></p>
       </noscript>
