--- a/sites/www.thunderbird.net/includes/_enonly/system_requirements.html
+++ b/sites/www.thunderbird.net/includes/_enonly/system_requirements.html
@@ -12,7 +12,7 @@
 {% block content %}
   <section class="section-text">
     <div class="section-heading">
-      <h2>{{ _('Version <span class="txt-gradient">%(version)s</span>'|format(version=version)) }}</h2>
+      <h2>{{ _('Version <span class="txt-gradient">%(version)s</span>')|format(version=version) }}</h2>
     </div>
     <div class="release-notes-container">
       {{ release.system_requirements|markdown|safe }}
