Fix phantom `s` character, and adjust mobile sizing of heading tags.

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -54,15 +54,11 @@ header {
 
   .tagline {
     margin-top: 1rem;
-    font-size: 5rem;
+    font-size: var(--font-tagline);
   }
 
   @media (max-width: @md) {
     min-height: 18.75rem;
-
-    .tagline {
-      font-size: 4rem;
-    }
   }
   // Fix for no hidpi 4k
   @media (min-width: @xl) {
