--- a/assets/less/pages/who-we-are.less
+++ b/assets/less/pages/who-we-are.less
@@ -107,6 +107,13 @@
         border-radius: 100%;
       }
 
+      .pixel {
+        image-rendering: pixelated;
+      }
+      .border {
+        border: 1px solid var(--color-ink-70);
+      }
+
       h5 {
         font-size: var(--font-lg);
         margin: auto;
