Locale specific css tweaks

--- a/assets/less/new/sizing.less
+++ b/assets/less/new/sizing.less
@@ -13,6 +13,7 @@
   --font-body: 1.125rem;      // 18px
 
   --font-tagline: 5rem;
+  --font-cta: 5rem;
   --font-h2: 2.75rem;
   --font-h3: 2rem;
   --font-h4: 1.25rem;
@@ -21,14 +22,10 @@
 @media (max-width: @md) {
   :root {
     --font-tagline: 4rem;
+    --font-cta: 2.75rem;
     --font-h2: 2.5rem;
     --font-h3: 2rem;
     --font-h4: 1.25rem;
-  }
-  // TODO: Integrate this with l10n css.
-  // Langs: Upper Sorbian
-  html[lang="hsb"] {
-    --font-tagline: 3rem;
   }
 }
 
