--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="footer">
   <div class="container footer">
     <a href="{{ url('thunderbird.index') }}" class="logo" aria-hidden="true">
       {{ svg('Thunderbird_Logo') }}
