--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -84,7 +84,7 @@
 </div>
 <section id="whats-next">
   <div class="container">
-    <div class="section-text">
+    <div class="section-text wrap-balance">
       <h2>{{_('Learn What’s <span class="txt-gradient">Next</span>')}}</h2>
       <p>
         {% block post_content_copy %}
