--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -28,6 +28,7 @@
   }
 
   .tagline {
+    text-wrap: balance;
     font-weight: 800;
     margin-bottom: 0;
   }
@@ -135,7 +136,7 @@
     }
 
     .cta-heading {
-      font-size: 5rem;
+      font-size: var(--font-cta);
       font-weight: 900;
       line-height: 1.3;
       margin: 0;
@@ -308,9 +309,6 @@
     #free-your-inbox {
       .section-text {
         max-inline-size: 100%;
-      }
-      .cta-heading {
-        font-size: 2.75rem;
       }
     }
 
