Tweak staff list sizing

--- a/assets/less/pages/who-we-are.less
+++ b/assets/less/pages/who-we-are.less
@@ -113,10 +113,11 @@
 
       h5 {
         font-size: var(--font-md);
-        margin: auto auto 0.25rem;
+        margin: auto auto 0.2rem;
         white-space: break-spaces;
         align-content: center;
-        min-height: calc(1.5rem * 2);
+        min-height: calc(1.2rem * 2);
+        line-height: 1.2rem;
       }
 
       .job-title {
