Text size tweaks, and split off footer styling to a separate file.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -16,6 +16,7 @@
 @import "./new/components/testimonial.less";
 @import "./new/components/pre-footer.less";
 @import "./new/components/announcement.less";
+@import "./new/components/footer.less";
 
 // Page imports
 @import "./pages/donations.less";
