--- a/assets/less/new/sizing.less
+++ b/assets/less/new/sizing.less
@@ -9,10 +9,11 @@
   --font-2xl: 1.3125rem;      // 21px
   --font-3xl: 1.5625rem;      // 25px
   --font-4xl: 2.5625rem;      // 41px
-  --font-hero: 3.6875rem;     // 59px
   --font-body: 1.125rem;      // 18px
 
   --font-tagline: 5rem;
+  --font-hero: 1.4rem;        // 22.4px
+
   --font-cta: 5rem;
   --font-h2: 2.75rem;
   --font-h3: 2rem;
@@ -24,6 +25,17 @@
     --font-tagline: 4rem;
     --font-cta: 2.75rem;
     --font-h2: 2.5rem;
+    --font-h3: 2rem;
+    --font-h4: 1.25rem;
+  }
+}
+
+@media (max-width: @xs) {
+  :root {
+    --font-tagline: 2.75rem;
+    --font-hero: 1.25rem;
+    --font-cta: 2.5rem;
+    --font-h2: 2.25rem;
     --font-h3: 2rem;
     --font-h4: 1.25rem;
   }
