--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -35,7 +35,7 @@
 
 
   .hero-text {
-    font-size: 1.4rem;
+    font-size: var(--font-hero);
     font-weight: 500;
     text-align: center;
     line-height: 1.4;
