Fix some dead links, and add a redirect for now.

--- a/sites/www.thunderbird.net/includes/faq.html
+++ b/sites/www.thunderbird.net/includes/faq.html
@@ -8,7 +8,7 @@
     </summary>
     <p class="answer">
       {% trans trimmed donate=url('thunderbird.donate.form'), check=url('thunderbird.donate.ways-to-give.check'),
-      ways_to_help=url('thunderbird.get-involved') %}
+      ways_to_help=url('thunderbird.participate') %}
       You can <a href="{{ donate }}">donate online</a> securely by credit card or PayPal. Google Pay, Apple Pay, and
       bank transfers through SEPA, iDEAL and ACH are also available online.<br/>
       <strong>Give in your local currency!</strong> On <a href="{{ donate }}">our online form</a>, use the drop down
