--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -38,7 +38,7 @@
   max-width: 100vw;
 }
 
-@media (max-width: @xl) {
+@media (max-width: @xxl) {
   .site-nav #nav-cat-contribute {
     --popover-left-align: -6rem;
   }
@@ -295,7 +295,7 @@
     width: 100%;
   }
 
-
+  // Mobile nav
   @media (max-width: @lg) {
     display: none;
     position: absolute;
@@ -324,6 +324,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
 
+
     .nav-entry {
       padding: 1rem 1rem;
       border-bottom: 2px var(--color-gray-30) solid;
@@ -344,8 +345,10 @@
           }
 
           .entry-container > a {
-            min-height: 1rem;
+            min-height: var(--font-2xl);
+            margin: 1rem 0;
             border-bottom: none;
+            padding-bottom: 0;
           }
 
           .entry-icon {
@@ -364,7 +367,7 @@
             }
 
             h2 {
-              font-size: 1rem;
+              font-size: var(--font-lg);
             }
           }
         }
