--- a/sites/www.thunderbird.net/includes/donor-contact/fa-body.html
+++ b/sites/www.thunderbird.net/includes/donor-contact/fa-body.html
@@ -93,7 +93,7 @@
           </label>
           <br>
           <div class="inputWrapper">
-            <select aria-required="true" id="tfa_95" name="tfa_95" title="{{ _('I need') }}" class="required">
+            <select aria-required="true" id="tfa_95" name="tfa_95" title="{{ _('I need') }}" class="required form-select">
             <option value="">
               {{ _('Please select...') }}
             </option>
@@ -275,7 +275,7 @@
               </div>
             </div>
           </div>
-          <input type="submit" data-label="Submit" class="primaryAction" id="submit_button" value="{{ _('Submit') }}" data-condition="`#tfa_186` OR `#tfa_187` OR `#tfa_188` OR `#tfa_189` OR `#tfa_190` OR `#tfa_191` OR `#tfa_191` OR `#tfa_192` OR `#tfa_192` OR `#tfa_193` OR `#tfa_194` OR `#tfa_195` OR `#tfa_196`" data-conditional-mode="hidden">
+          <input type="submit" data-label="Submit" class="btn btn-white-bg" id="submit_button" value="{{ _('Submit') }}" data-condition="`#tfa_186` OR `#tfa_187` OR `#tfa_188` OR `#tfa_189` OR `#tfa_190` OR `#tfa_191` OR `#tfa_191` OR `#tfa_192` OR `#tfa_192` OR `#tfa_193` OR `#tfa_194` OR `#tfa_195` OR `#tfa_196`" data-conditional-mode="hidden">
         </div>
         <div style="clear:both"></div>
         <input type="hidden" value="11" name="tfa_dbFormId" id="tfa_dbFormId">
