--- a/assets/less/pages/donations-help.less
+++ b/assets/less/pages/donations-help.less
@@ -2,6 +2,7 @@
   .section-text {
     text-align: left;
     font-family: 'Inter', sans-serif !important;
+    padding-bottom: 0;
 
     @media (max-width: @md) {
       max-inline-size: 100%;
@@ -18,6 +19,19 @@
       padding-block: 0;
       display: flex;
       flex-direction: column;
+    }
+  }
+
+  .wFormHeader {
+    display: none;
+  }
+
+  .wFormContainer {
+    .btn {
+      // override form assembly theme
+      padding: .5em 3em !important;
+      // give it some space
+      margin-top: 1rem;
     }
   }
 
