Show accordion system requirements if we have them as a dict, otherwise hide 'em.

--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -43,8 +43,16 @@
   }
 
   .system-requirements {
+    h2 {
+      display: none;
+    }
+
     ul {
       .styled-list();
+    }
+
+    .question {
+      text-transform: capitalize;
     }
   }
 
