Add survey landing page

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -31,3 +31,4 @@
 @import "./pages/newsletter.less";
 @import "./pages/donations-help.less";
 @import "./pages/holiday.less";
+@import "./pages/survey.less";
