--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -58,10 +58,10 @@
 .download-link.btn-download,
 .btn,
 button {
-  font-size: 1rem;
+  font-size: var(--font-md);
   background: var(--btn-bg, transparent);
   border-radius: 0.375rem ;//6px;
-  border: .12em solid currentColor;
+  border: .125em solid currentColor;
   color: currentColor;
   padding: .5em 3em;
   position: relative;
@@ -287,7 +287,7 @@ button:hover::after {
   border-inline-start: 2px solid currentColor;
   padding: .75rem 2.5rem;
   margin: 0;
-  font-size: 1rem;
+  font-size: var(--font-md);
   // FIXME: This needs to get cleaned up and applied to btns generically
   --btn-background-color: rgba(0, 0, 0, 0.8);
   @btn-no-bg-styling();
